tests/paczka1/fuzzy1/21320396.err
Error in line 2: t0Fdzt A437 32,3
Error in line 5: A752 A752 79,7
Error in line 7: C9KsMuXAwOx A273 9,5
Error in line 8: A752 S994 84,8
Error in line 14: A752 A437 17,7
Error in line 16: wiLEY0n1 A437 19,7
Error in line 21: Mq12u S994 8,7
